--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ED0808</color>
-    <color name="colorPrimaryDark">#7A0000</color>
-    <color name="colorAccent">#A5A5A5</color>
+    <color name="primaryColor">#d50000</color>
+    <color name="primaryLightColor">#ff5131</color>
+    <color name="primaryDarkColor">#9b0000</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="tabBar_item_selected">#FFFFFF</color>
+    <color name="tabBar_item_not_selected">#3E3E3E</color>
+    <color name="tabBar_background">#1B1B1B</color>
 </resources>
