--- a/app/src/main/res/layout/tab_fragment_todos.xml
+++ b/app/src/main/res/layout/tab_fragment_todos.xml
@@ -20,5 +20,15 @@
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/todos_empty_todo_list_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/tab_todos_empty_todo_list"
+        android:textSize="16sp"
+        android:visibility="gone">
+
+    </com.google.android.material.textview.MaterialTextView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
