--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:checkable="true"
+    android:layout_margin="4dp"
+    android:layout_marginBottom="6dp"
     android:clickable="true"
-    android:focusable="true"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    app:cardBackgroundColor="@color/cardview_dark_background"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,21 +21,31 @@
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/todo_item_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Test todo eintrag" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/todo_item_delete"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="48dp"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
-            app:icon="@drawable/ic_baseline_delete_24"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/todo_item_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/todo_item_checkbox"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Todo Eintrag" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/todo_item_priority_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_panorama_fish_eye_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
