--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#d50000</color>
-    <color name="primaryLightColor">#ff5131</color>
-    <color name="primaryDarkColor">#9b0000</color>
+
+
+    <color name="primaryColor">#455a64</color>
+    <color name="primaryLightColor">#718792</color>
+    <color name="primaryDarkColor">#1c313a</color>
+    <color name="secondaryColor">#b0bec5</color>
+    <color name="secondaryLightColor">#e2f1f8</color>
+    <color name="secondaryDarkColor">#808e95</color>
     <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
     <color name="tabBar_item_selected">#FFFFFF</color>
     <color name="tabBar_item_not_selected">#3E3E3E</color>
     <color name="tabBar_background">#1B1B1B</color>
