--- a/app/src/main/res/layout/tab_fragment_todos.xml
+++ b/app/src/main/res/layout/tab_fragment_todos.xml
@@ -4,13 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".views.tabs.todos.TodosFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todos_todo_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp" />
+        android:orientation="vertical">
+
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/todosSwitchFilterEnable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/todos_enable_filter_label" />
+
+        <LinearLayout
+            android:id="@+id/todosFilterLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/todosFilterFilterByPriority"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/todos_filter_by_priority_label" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/todosFilterFilterByUnchecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/todos_filter_by_unchecked_label" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todos_todo_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp" />
+
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/todos_floating_action_button"
@@ -30,5 +69,6 @@
         android:visibility="gone">
 
     </com.google.android.material.textview.MaterialTextView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
