Fix some filter bugs

--- a/app/src/main/res/layout/tab_fragment_todos.xml
+++ b/app/src/main/res/layout/tab_fragment_todos.xml
@@ -41,6 +41,13 @@
                 android:padding="8dp"
                 android:text="@string/todos_filter_by_unchecked_label" />
 
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/todosFilterFilterByDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="@string/todos_filter_by_date_label" />
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
