--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -30,11 +30,10 @@
             android:id="@+id/todo_item_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
             android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/todo_item_checkbox"
+            app:layout_constraintBaseline_toBaselineOf="@id/todo_item_checkbox"
+            app:layout_constraintEnd_toStartOf="@+id/todo_item_priority_icon"
+            app:layout_constraintStart_toEndOf="@+id/todo_item_checkbox"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Todo Eintrag" />
 
@@ -43,9 +42,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_panorama_fish_eye_24"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/todo_item_checkbox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/todoItemDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="12.12.1970 12:12:12"
+            android:textColor="@color/secondaryTextColor"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/todo_item_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
