--- a/app/src/main/res/layout/dialog_new_todo.xml
+++ b/app/src/main/res/layout/dialog_new_todo.xml
@@ -1,105 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/newtodoInputTitleWrapper"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/new_todo_title_hint"
-        app:errorEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/newtodoInputTitle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.google.android.material.slider.Slider
-            android:id="@+id/newtodoSliderPriority"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/newtodoInputTitleWrapper"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stepSize="25"
-            android:value="50"
-            android:valueFrom="0"
-            android:valueTo="100">
+            android:hint="@string/new_todo_title_hint"
+            app:errorEnabled="true">
 
-        </com.google.android.material.slider.Slider>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/newtodoInputTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <!--region Priority Slider-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/newtodoSliderPriority"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stepSize="25"
+                android:value="50"
+                android:valueFrom="0"
+                android:valueTo="100">
+
+            </com.google.android.material.slider.Slider>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:text="@string/new_todo_priority" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/newtodoPriorityLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/todo_priotiy_default" />
+            </LinearLayout>
+        </LinearLayout>
+        <!--endregion Priority Slider-->
+
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:text="@string/new_todo_priority" />
+            <Button
+                android:id="@+id/newTodoSwitchExecutionDateTime"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:clickable="true"
+                android:drawableEnd="@drawable/ic_baseline_expand_more_24"
+                android:text="@string/todos_execution_date_label"
+                android:textAlignment="textStart"
+                android:textSize="12dp" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/newtodoPriorityLabel"
-                android:layout_width="wrap_content"
+
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/newTodoExecutionDateTimeLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/todo_priotiy_default" />
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp">
+
+                    <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@+id/newTodoSwitchExecutionDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/todos_date_label" />
+
+                    <DatePicker
+                        android:id="@+id/newTodoExecutionDatePicker"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="14dp"
+                        android:calendarViewShown="false"
+                        android:datePickerMode="spinner"
+                        android:visibility="gone" />
+
+
+                    <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@+id/newTodoSwitchExecutionTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:text="@string/todos_time_label" />
+
+                    <TimePicker
+                        android:id="@+id/newTodoExecutionTimePicker"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:timePickerMode="spinner"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
         </LinearLayout>
-    </LinearLayout>
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/newtodoSwitchAddContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-        android:text="@string/new_todo_add_content" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/newtodoInputContentWrapper"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/new_todo_content_hint"
-        android:visibility="gone"
-        app:errorEnabled="true">
-
-        <EditText
-            android:id="@+id/newtodoInputContent"
+        <Button
+            android:id="@+id/newTodoButtonAddContent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="start"
-            android:inputType="textMultiLine"
-            android:lines="4" />
+            android:layout_height="40dp"
+            android:clickable="true"
+            android:drawableEnd="@drawable/ic_baseline_expand_more_24"
+            android:text="@string/new_todo_add_content"
+            android:textAlignment="textStart"
+            android:textSize="12dp" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/newtodoButtonNewTodo"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/newTodoInputContentWrapper"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/new_todo_add_todo" />
+            android:hint="@string/new_todo_content_hint"
+            android:visibility="gone"
+            app:errorEnabled="true">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/newtodoButtonCancel"
+            <EditText
+                android:id="@+id/newTodoInputContent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="start"
+                android:inputType="textMultiLine"
+                android:lines="4" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#c0c0c0" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/global_cancel" />
+            android:orientation="vertical">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/newTodoButtonNewTodo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/new_todo_add_todo" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/newTodoButtonCancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/global_cancel" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
