--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
     android:layout_marginBottom="6dp"
     android:clickable="true"
     android:orientation="horizontal"
@@ -48,16 +47,18 @@
 
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/todoItemDate"
+            android:id="@+id/todo_item_execution_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="12.12.1970 12:12:12"
-            android:textColor="@color/secondaryTextColor"
-            android:textSize="12sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:textColor="@android:color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/todo_item_title" />
+            app:layout_constraintEnd_toEndOf="@+id/todo_item_priority_icon"
+            app:layout_constraintTop_toBottomOf="@+id/todo_item_title"
+            tools:text="12.12.2015 12:45" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
