--- a/app/src/main/res/layout/tab_fragment_todos.xml
+++ b/app/src/main/res/layout/tab_fragment_todos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".views.tabs.todos.TodosFragment">
+    tools:context=".general.tabs.todos.TodosFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
