--- a/app/src/main/res/layout/fragment_datetime_selection.xml
+++ b/app/src/main/res/layout/fragment_datetime_selection.xml
@@ -7,6 +7,12 @@
     android:padding="16dp"
     tools:context=".ui.customcomponent.datetimeselection.DateTimeSelectionFragment">
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/newTodoSwitchEnableNotification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/new_todo_enable_notification"/>
+
     <Button
         android:id="@+id/newTodoExpandDatePicker"
         android:layout_width="match_parent"
